# src/services/cart/v1/UseCases/DeleteItemInCart/CartController.cs
@@ -4,27 +4,27 @@ using Microsoft.AspNetCore.Mvc;
 using VND.FW.Infrastructure.AspNetCore;
 using ControllerBase = VND.FW.Infrastructure.AspNetCore.ControllerBase;
 
-namespace VND.CoolStore.Services.Cart.v1.UseCases.GetCartById
+namespace VND.CoolStore.Services.Cart.v1.UseCases.DeleteItemInCart
 {
   [ApiVersion("1.0")]
   [Route("api/carts")]
   public class CartController : ControllerBase
   {
     private readonly IMediator _eventAggregator;
-    private readonly GetCartPresenter _presenter;
+    private readonly DeleteItemPresenter _presenter;
 
     public CartController(
       IMediator eventAggregator,
-      GetCartPresenter presenter)
+      DeleteItemPresenter presenter)
     {
       _eventAggregator = eventAggregator;
       _presenter = presenter;
     }
 
-    [HttpGet]
-    [Route("{id}")]
+    [HttpDelete]
+    [Route("{cartId:guid}/items/{productId:guid}")]
     [Auth(Policy = "access_cart_api")]
-    public async Task<IActionResult> Get([FromBody] GetCartRequest request)
+    public async Task<IActionResult> RemoveItemInCart([FromBody] DeleteItemRequest request)
     {
       var result = await _eventAggregator.Send(request);
       return _presenter.Populate(result);
