# src/services/cart/v1/UseCases/DeleteItemInCart/DeleteItemHandler.cs
@@ -1,18 +1,23 @@
 using System;
 using System.Linq;
+using System.Threading;
 using System.Threading.Tasks;
+using MediatR;
 using VND.CoolStore.Services.Cart.Domain;
 using VND.CoolStore.Services.Cart.Infrastructure.Gateways;
+using VND.CoolStore.Services.Cart.Infrastructure.Services;
 using VND.CoolStore.Services.Cart.v1.Services;
 using VND.Fw.Domain;
 using VND.FW.Infrastructure.EfCore.Repository;
 using VND.FW.Infrastructure.EfCore.Service;
 
-namespace VND.CoolStore.Services.Cart.v1.UseCases.DeleteItemInCart.Impl
+namespace VND.CoolStore.Services.Cart.v1.UseCases.DeleteItemInCart
 {
-  public class DeleteItemService : CartServiceBase, IDeleteItemService, ICommandService, IQueryService
+  public class DeleteItemHandler : CartServiceBase,
+    IRequestHandler<DeleteItemRequest, DeleteItemResponse>,
+    ICommandService, IQueryService
   {
-    public DeleteItemService(
+    public DeleteItemHandler(
       ICatalogGateway catalogGateway,
       IUnitOfWorkAsync uow,
       IQueryRepositoryFactory queryRepositoryFactory)
@@ -22,6 +27,7 @@ namespace VND.CoolStore.Services.Cart.v1.UseCases.DeleteItemInCart.Impl
       QueryRepositoryFactory = queryRepositoryFactory;
     }
 
+    public PriceCalculatorContext PriceCalculatorContext { get; set; }
     public IQueryRepositoryFactory QueryRepositoryFactory { get; }
 
     public IUnitOfWorkAsync UnitOfWork { get; }
@@ -31,15 +37,15 @@ namespace VND.CoolStore.Services.Cart.v1.UseCases.DeleteItemInCart.Impl
       return QueryRepositoryFactory.QueryRepository<Domain.Cart>() as IEfQueryRepository<Domain.Cart>;
     }
 
-    public async Task<bool> Execute(Guid cartId, Guid productId)
+    public async Task<DeleteItemResponse> Handle(DeleteItemRequest request, CancellationToken cancellationToken)
     {
       var cartRepository = UnitOfWork.Repository<Domain.Cart>();
       var cartItemRepository = UnitOfWork.Repository<CartItem>();
 
-      var cart = await GetCart(cartId);
+      var cart = await GetCart(request.CartId);
       cart = await InitCart(cart);
 
-      var cartItem = cart.CartItems.FirstOrDefault(x => x.Product.ProductId == productId);
+      var cartItem = cart.CartItems.FirstOrDefault(x => x.Product.ProductId == request.ProductId);
       if (cartItem == null)
       {
         throw new Exception($"Could not find CartItem {cartItem.Id}");
@@ -49,7 +55,9 @@ namespace VND.CoolStore.Services.Cart.v1.UseCases.DeleteItemInCart.Impl
       var isSucceed = await cartRepository.UpdateAsync(cart) != null;
       await cartItemRepository.DeleteAsync(cartItem);
 
-      return UnitOfWork.Commit();
+      UnitOfWork.Commit();
+
+      return new DeleteItemResponse { ProductId = cartItem.Product.ProductId };
     }
   }
 }
