# src/services/rating/swagger/swagger.json
@@ -1,178 +1,157 @@
 {
-	"basePath": "/",
-	"consumes": [
-		"application/json"
-	],
-	"definitions": {
-		"Rating": {
-			"description": "",
-			"properties": {
-				"id": {
-					"type": "string",
-					"description": ""
-				},
-				"productId": {
-					"type": "string",
-					"description": ""
-				},
-				"userId": {
-					"type": "string",
-					"description": ""
-				},
-				"cost": {
-					"type": "number",
-					"description": ""
-				}
-			},
-			"required": [
-				"productId",
-				"userId",
-				"userId",
-				"cost"
-			],
-			"type": "object"
-		}
-	},
-	"info": {
-		"license": {
-			"name": "ISC"
-		},
-		"title": "Rating",
-		"version": "1.0.0"
-	},
-	"paths": {
-		"/api/v1/ratings": {
-			"get": {
-				"summary": "Get all ratings",
-				"operationId": "getratings",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"schema": {
-							"type": "array",
-							"items": {
-								"$ref": "#/definitions/Rating"
-							}
-						}
-					}
-				},
-				"description": "",
-				"parameters": []
-			},
-			"post": {
-				"description": "Optional description in *Markdown*",
-				"summary": "Create a rating",
-				"operationId": "createratings",
-				"responses": {
-					"201": {
-						"description": "Created"
-					}
-				},
-				"parameters": [
-					{
-						"in": "body",
-						"name": "rating",
-						"description": "The rating to create.",
-						"schema": {
-							"type": "object",
-							"properties": {
-								"productId": {
-									"type": "string",
-									"description": ""
-								},
-								"userId": {
-									"type": "string",
-									"description": ""
-								},
-								"cost": {
-									"type": "number",
-									"description": ""
-								}
-							},
-							"required": [
-								"productId",
-								"userId",
-								"cost"
-							]
-						}
-					}
-				]
-			},
-			"put": {
-				"description": "Optional description in *Markdown*",
-				"summary": "Update a rating",
-				"operationId": "updateratings",
-				"responses": {
-					"200": {
-						"description": "Created"
-					}
-				},
-				"parameters": [
-					{
-						"in": "body",
-						"name": "rating",
-						"description": "The rating to update.",
-						"schema": {
-							"type": "object",
-							"properties": {
-								"productId": {
-									"type": "string",
-									"description": ""
-								},
-								"userId": {
-									"type": "string",
-									"description": ""
-								},
-								"cost": {
-									"type": "number",
-									"description": ""
-								}
-							},
-							"required": [
-								"productId",
-								"userId",
-								"cost"
-							]
-						}
-					}
-				]
-			}
-		},
-		"/api/v1/ratings/{productId}": {
-			"get": {
-				"summary": "Get rating by product id",
-				"operationId": "getByProductId",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"schema": {
-							"$ref": "#/definitions/Rating"
-						}
-					}
-				},
-				"description": "",
-				"parameters": [
-					{
-						"name": "productId",
-						"in": "path",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		}
-	},
-	"produces": [
-		"application/json"
-	],
-	"swagger": "2.0",
-	"securityDefinitions": {}
+  "basePath": "/",
+  "consumes": ["application/json"],
+  "definitions": {
+    "Rating": {
+      "description": "",
+      "properties": {
+        "id": {
+          "type": "string",
+          "description": ""
+        },
+        "productId": {
+          "type": "string",
+          "description": ""
+        },
+        "userId": {
+          "type": "string",
+          "description": ""
+        },
+        "cost": {
+          "type": "number",
+          "description": ""
+        }
+      },
+      "required": ["productId", "userId", "userId", "cost"],
+      "type": "object"
+    }
+  },
+  "info": {
+    "license": {
+      "name": "ISC"
+    },
+    "title": "Rating",
+    "version": "1.0.0"
+  },
+  "paths": {
+    "/api/ratings": {
+      "get": {
+        "summary": "Get all ratings",
+        "operationId": "getratings",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Rating"
+              }
+            }
+          }
+        },
+        "description": "",
+        "parameters": []
+      },
+      "post": {
+        "description": "Optional description in *Markdown*",
+        "summary": "Create a rating",
+        "operationId": "createratings",
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        },
+        "parameters": [
+          {
+            "in": "body",
+            "name": "rating",
+            "description": "The rating to create.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "productId": {
+                  "type": "string",
+                  "description": ""
+                },
+                "userId": {
+                  "type": "string",
+                  "description": ""
+                },
+                "cost": {
+                  "type": "number",
+                  "description": ""
+                }
+              },
+              "required": ["productId", "userId", "cost"]
+            }
+          }
+        ]
+      },
+      "put": {
+        "description": "Optional description in *Markdown*",
+        "summary": "Update a rating",
+        "operationId": "updateratings",
+        "responses": {
+          "200": {
+            "description": "Created"
+          }
+        },
+        "parameters": [
+          {
+            "in": "body",
+            "name": "rating",
+            "description": "The rating to update.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "productId": {
+                  "type": "string",
+                  "description": ""
+                },
+                "userId": {
+                  "type": "string",
+                  "description": ""
+                },
+                "cost": {
+                  "type": "number",
+                  "description": ""
+                }
+              },
+              "required": ["productId", "userId", "cost"]
+            }
+          }
+        ]
+      }
+    },
+    "/api/ratings/{productId}": {
+      "get": {
+        "summary": "Get rating by product id",
+        "operationId": "getByProductId",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/Rating"
+            }
+          }
+        },
+        "description": "",
+        "parameters": [
+          {
+            "name": "productId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    }
+  },
+  "produces": ["application/json"],
+  "swagger": "2.0",
+  "securityDefinitions": {}
 }
